# monorepo

./: .env  .envrc  .gitignore  Makefile  Taskfile.yml  config.toml  go.work  go.work.sum
.github/workflows/: deploy.yaml  lint.yaml
.op/plugins/: aws.json
development/: install_homebrew.sh
infra/: .gitignore  Makefile  Pipfile  Taskfile.yaml  cloud-config.yaml  requirements.yml  root_k3s.yaml
infra/.vagrant/bundler/: global.sol
infra/ansible/: Taskfile.yml  ansible.cfg  pyproject.toml  requirements.yml
infra/ansible/inventory/: hetzner
infra/ansible/playbooks/: dokku.yml  k3s.yml
infra/inventory/: beast  local.sh
infra/kpaas/: pyproject.toml
infra/kpaas/kpaas/: app.py  app_config.py  cmd.py  helm.py  values.py
infra/kpaas/kpaas/helm/: __init__.py  apply.py  delete.py  diff.py  models.py  utils.py
infra/manifests/.output/: tailscale-operator.yaml
infra/manifests/system/: tailscale-operator.yaml
infra/playbooks/: bootstrap_anisible.yml  dokku.yml  k3s.yml
infra/proxy/: Taskfile.yaml
infra/proxy/cfproxy/: package-lock.json  package.json  wrangler.toml
infra/proxy/cfproxy/src/: proxy.ts
infra/scripts/: local.sh
infra/tasks/: dokku.yml  dokku_service.yml  grafana.yml  influxdb.yml  netdata.yml  node_exporter.yml  prometheus.yml  statsd_exporter.yml  tailscale.yml
infra/tasks/templates/: grafana.ini.j2  grafana_datasource.yaml.j2  loki-config.yml.j2  prometheus.yml.j2  tailscale-operator.yaml.j2  upstream.j2
projects/starscrape/: crawl_repository.go  crawler.go  go.mod  go.sum  logs.txt  main.go  main_test.go  priority_queue_test.go
script/: bootstrap  dokku
src/: Taskfile.yml  helmfile.yaml
src/apps/: Taskfile.yaml
src/apps/clipper/: .flake8  .gitignore  Procfile  Taskfile.yaml  app  env  pyproject.toml
src/apps/clipper/clipper/: htmlprocessing.py  json_metadata.py  main.py  metadata.py  models.py  readability.py  resource.py  santize.py  settings.py  utils.py  xpaths.py
src/apps/clipper/clipper/readability/: readability.py
src/apps/clipper/templates/: extract.html.jinja2
src/apps/kubernetes-dashboard/: app.yaml
src/apps/minio/: Dockerfile  README.md  Taskfile.yaml  app  env  update.sh
src/apps/pproxy/: Procfile  Taskfile.yaml  app  env  pyproject.toml  run  user_agents.py
src/apps/pproxy/extra/: script.js
src/apps/pproxy/pproxy/: main.py  prime.py  providers.py  proxy_pool.py  test_main.py
src/apps/pproxy/tmp/: cache.db  cache.db-shm  cache.db-wal
src/apps/scrapoxy/: Dockerfile  Taskfile.yaml  app  env
src/apps/seeds/: Taskfile.yaml  alembic.ini  app  env  model.dot  pyproject.toml
src/apps/seeds/migrations/: env.py
src/apps/seeds/migrations/versions/: 2981863f3dd9_connect_resource_and_seed.py  da9a6c4065da_init.py  daf74f291f6e_add_seed.py
src/apps/seeds/seeds/: conftest.py
src/apps/seeds/seeds/comms/: cf.py  main.py  test_main.py
src/apps/seeds/seeds/crawl/: locks.py  main.py  models.py  service.py  tasks.py  test_service.py  test_tasks.py  utils.py
src/apps/seeds/seeds/logs/: __init__.py  main.py  middleware.py
src/apps/seeds/seeds/models/: __init__.py  base.py  crawl.py  db.py  mixins.py  resource.py  seed.py  seed_resource.py  service.py  test_resource.py  test_service.py
src/apps/seeds/seeds/resource/: models.py  service.py
src/apps/seeds/seeds/tasks/: main.py
src/apps/seeds/seeds/views/: main.py
src/apps/seeds/templates/: info.html
src/apps/tailscale-operator/: app.jsonnet  app.yaml  post.yaml
src/go/bookapi/: .gitignore  Makefile  Pipfile
src/go/cstapi/: go.mod
src/go/living-room-kiosk/: .gitignore  Makefile  config.json  wifi.json
src/go/mrun/: go.mod  go.sum  main.go
src/go/starscrape/: .gitignore  Makefile  fetcher.go  fetcher_test.go  finders.go  priorty_queue.go  starscrape.prof  tools.go
src/js/big-clock/: package-lock.json  package.json
src/js/obsidian-bookmarklet/: Makefile  build.sh  package-lock.json  package.json  readme.md  readme.template.md  webpack.config.js
src/js/rrreade/: .env  Makefile  middleware.ts  package-lock.json  package.json
src/js/sports-diagram/: .prettierrc  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/js/sports-whiteboard/: .gitignore  .gitpod.yml  Makefile  README.md  cypress.json  jest.config.js  next.config.js  package.json  sentry.edge.config.ts  sentry.properties  sentry.server.config.js  stats.json
src/libs/putil/: pyproject.toml
src/libs/putil/putil/: main.py
src/python/engquotes/: .dev.env  .setup.env  Makefile  Pipfile  quotes.csv
src/python/ids/: ids.py
src/python/isbnapi/: Makefile
src/python/notebooks/: Makefile  Pipfile  Procfile  manage.py  pytest.ini
src/python/rrreade/: Pipfile
src/python/visionquest/: Pipfile  diagram.py
(+600 files in other folders)
