[tool.poetry]
name = "pproxy"
version = "0.1.0"
description = ""
authors = ["voidfiles <voidfiles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
tenacity = "^8.5.0"
httpx = {extras = ["socks"], version = "^0.27.0"}
structlog = "^24.2.0"
diskcache = "^5.6.3"
async-pool = "^0.1.4"
async-timeout = "^4.0.3"
aiocron = "^1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
